Fix- API and verify-token
