# swagger.yaml
@@ -12,7 +12,7 @@ info:
     url: 'https://www.apache.org/licenses/LICENSE-2.0.html'
 servers:
   - description: Dev
-    url: 'http://localhost:8000/api/v1'
+    url: 'http://localhost:2000/api/v1'
   - description: SwaggerHub API Auto Mocking
     url: 
       https://virtserver.swaggerhub.com/Learning-SwaggerAPI/Vaccination-API/1.0.0
@@ -171,8 +171,8 @@ paths:
           $ref: '#/components/responses/404'
         '500':
           $ref: '#/components/responses/500'
-  '/aputh/verify/{token}':
-    post:
+  '/auth/verify/{token}':
+    get:
       description: Verify email address
       tags:
         - Auth
